updated styles and added Procfile for heroku

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,28 @@
+#room-list {
+  float: right;
+  width: 100px;
+  height: 300px;
+  overflow: auto;
+}
+
+#room-list div {
+  border-bottom: 1px solid #eee;
+}
+
+#room-list div:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+#send-message {
+  width: 690px;
+  margin-bottom: 1em;
+  margin-right: 1em;
+}
+
+#help {
+  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
 body {
   padding: 50px;
 }
